--- a/fitness_tracker_frontend/package.json
+++ b/fitness_tracker_frontend/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.26.2",
+    "axios": "^1.7.7",
+    "recharts": "^2.12.7",
+    "date-fns": "^3.6.0",
+    "clsx": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
